--- a/content/blog/2019-01-05-relative-age-effect-revisited.Rmd
+++ b/content/blog/2019-01-05-relative-age-effect-revisited.Rmd
@@ -8,7 +8,7 @@ draft: yes
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(cache = FALSE, warning = FALSE, message = FALSE, echo = FALSE, out.width = '75%', dev = 'svg', fig.align='center')
+knitr::opts_chunk$set(cache = FALSE, warning = FALSE, message = FALSE, echo = FALSE, out.width = '75%', fig.align='center')
 
 # load packages
 library(tidyverse)
