--- a/content/blog/2017-06-25-fpl-mythbusting-with-fplr.Rmd
+++ b/content/blog/2017-06-25-fpl-mythbusting-with-fplr.Rmd
@@ -15,13 +15,15 @@ knitr::opts_chunk$set(cache=TRUE, echo = TRUE, warning = FALSE, message = FALSE,
 
 library(tidyverse)
 library(fplr)
-library(hrbrthemes)
+library(ewenthemes)
 library(ggalt)
 library(forcats)
 library(zoo)
 
 # RData file for this script. Note that functions that created data are not evaluated in this rmd
 load("../data/fpl_2017.rda")
+
+chart_caption = "source: fantasy.premierleague.com | @ewen_"
 
 ```
 
@@ -81,13 +83,12 @@ leagueDetailed %>%
   ggplot(aes(x=event, y=val, group=1)) +
   geom_line(colour="#3A013B") +
   geom_smooth(se=FALSE, colour="#00FF96") +
-  scale_y_comma(limits = c(0, 500000)) +
-  theme_ipsum(grid="XY", base_size = 14, axis_title_size = 14, caption_size = 12,
-              plot_title_size = 18, subtitle_size = 14) +
+  scale_y_comma(limits = c(0, 500000), expand = c(0, 0)) +
+  theme_ewen_ws() +
   labs(title="Mean Change in Rank across the Season",
        subtitle="Sample of (708) users taken from an FPL mini-leage",
        x="Gameweek no.", y="Overall rank change",
-       caption="Source: https://fantasy.premierleague.com/a/leagues/standings/458675/classic")
+       caption=chart_caption)
 
 ```
 
@@ -112,12 +113,11 @@ leagueDetailed %>%
   geom_point(colour="#3A013B") +
   geom_smooth(method = "lm", se=FALSE, colour="#00FF96") +
   scale_x_comma(limits = c(4500000, 0), trans="reverse") +
-  theme_ipsum(grid="XY", base_size = 14, axis_title_size = 14, caption_size = 12,
-              plot_title_size = 18, subtitle_size = 14) +
+  theme_ewen_ws() +
   labs(title="Final Ranking vs. Team Value",
        subtitle="Sample of (364) 'active' users taken from an FPL mini-leage",
        x="Final rank", y="Total team value (millions)",
-       caption="Source: https://fantasy.premierleague.com/a/leagues/standings/458675/classic")
+       caption=chart_caption)
 ```
 
 There's a moderate positive correlation, but plenty of variation as well - as was the case in our outlier, it is possible that users may chase team value at the expense of their league performance. Still, we can say that there appears to be a relationship between retaining a high team value and ranking highly. 
@@ -144,12 +144,11 @@ leagueDetailed %>%
   geom_point(colour="#3A013B") +
   geom_smooth(method = "lm", se=FALSE, colour="#00FF96") +
   scale_x_comma(limits = c(4500000, 0), trans="reverse") +
-  theme_ipsum(grid="XY", base_size = 14, axis_title_size = 14, caption_size = 12,
-              plot_title_size = 18, subtitle_size = 14) +
+  theme_ewen_ws(axis = FALSE) +
   labs(title="Final Ranking vs. No. of Hits Taken",
        subtitle="Sample of (363) 'active' users taken from an FPL mini-leage",
        x="Final rank", y="No. of hits taken",
-       caption="Source: https://fantasy.premierleague.com/a/leagues/standings/458675/classic")
+       caption=chart_caption)
 ```
 
 It appears that taking hits has very little correlation with a user's rank. This would suggest that there are indeed good 'hits', as users are able to get a high rank while racking them up. At the same time, this illuminates other playing styles that can also bring success i.e. users who refrain from taking 'hits' are able to get as high rank as those that do. 
@@ -174,12 +173,12 @@ leagueDetailed %>%
   filter(total <= 110) %>%
   ggplot(aes(x=bench_pts, ..count..)) +
   geom_density(fill="#3A013B") +
-  theme_ipsum(grid="XY", base_size = 14, axis_title_size = 14, caption_size = 12,
-              plot_title_size = 18, subtitle_size = 14) +
+  theme_ewen_ws() +
+  scale_y_continuous(expand = expand_scale(mult = c(0, 0.1))) +
   labs(title="No. of Points Benched over the Season",
        subtitle="Sample of (364) 'active' users taken from an FPL mini-leage",
        x="Total no. of benched points", y="Count",
-       caption="Source: https://fantasy.premierleague.com/a/leagues/standings/458675/classic")
+       caption=chart_caption)
 ```
 
 What we see is close to a normal distribution. So, probably no FPL God's retribution. Most people benched somewhere in the region of 150-300 points over the course of a season, with an unlucky/lucky few coming in higher or lower respectively.
@@ -191,7 +190,7 @@ Another phenomenon, representing something of an FPL meta-game, is that of the "
 ```{r bandwagons}
 playersDetailed %>%
   group_by(player_id) %>%
-  mutate(var=paste(web_name, "(vs.", lag(opponent_team), ")")) %>%
+  mutate(var=paste0(web_name, " (vs. ", lag(opponent_team), ")")) %>%
   ungroup() %>%
   arrange(desc(transfers_balance)) %>%
   filter(row_number()<=6 | row_number()>=n()-4) %>%
@@ -200,11 +199,10 @@ playersDetailed %>%
   geom_col(fill="#3A013B") +
   scale_y_comma() +
   coord_flip() +
-  theme_ipsum(grid="XY", base_size = 14, axis_title_size = 14, caption_size = 12,
-              plot_title_size = 18, subtitle_size = 14) +
+  theme_ewen_ws(axis = FALSE, grid = FALSE) +
   labs(title="Transfer Booms & Busts",
        subtitle="The biggest net transfer swings of the season",
-       x="Player", y="Net Transfers")
+       x="Player", y="Net Transfers", caption = chart_caption)
 ```
 
 Dele Alli had the biggest influx of transfers all season in gameweek 21, after a masterclass against Chelsea. Incidentally, both the 2nd (Ibrahimovic) and 3rd (Gundogan) highest net transfers followed games against West Brom. 
@@ -217,7 +215,7 @@ Of course, these absolute swings are largely governed by a player's initial owne
 playersDetailed %>%
   group_by(player_id) %>%
   mutate(selected_chg = ((selected - lag(selected))/lag(selected)),
-         var=paste(web_name, "(vs.", lag(opponent_team), ")")) %>%
+         var=paste0(web_name, " (vs. ", lag(opponent_team), ")")) %>%
   arrange(desc(selected_chg)) %>%
   filter(transfers_balance >= 50000 | transfers_balance <= -50000) %>%
   ungroup() %>%
@@ -228,11 +226,10 @@ playersDetailed %>%
   geom_col(fill="#3A013B") +
   scale_y_percent(limits = c(-5, 25)) +
   coord_flip() +
-  theme_ipsum(grid="XY", base_size = 14, axis_title_size = 14, caption_size = 12,
-              plot_title_size = 18, subtitle_size = 14) +
+  theme_ewen_ws(axis = FALSE, grid = FALSE) +
   labs(title="Ownership Booms & Busts",
        subtitle="The biggest ownership (%) change of the season",
-       x="Player", y="Net ownership change (%)")
+       x="Player", y="Net ownership change (%)", caption = chart_caption)
 ```
 
 Here we see huge percentage increases in the ownership of Fer and Stuani after promising displays on the opening day of the season and second gameweek, respectively. It is often in the very early stages that users scramble for players, often after just a single good performance, as there are few data points to go by otherwise. Jesus and Gabbiadini were actually both new arrivals to the game in the mid-season transfer window (in January, clubs can buy additional players) who started well - again, in the absence of any long-term trend, users rushed to scoop up these players.
@@ -285,10 +282,9 @@ playersDetailed %>%
   ggplot(aes(x=round, y=transfers_balance)) +
   geom_line(colour="#3A013B") +
   scale_y_comma() +
-  theme_ipsum(grid="XY", base_size = 14, axis_title_size = 14, caption_size = 12,
-              plot_title_size = 18, subtitle_size = 14) +
+  theme_ewen_ws() +
   labs(title="Net Transfers of Top Point Scoring Players",
-       x="Gameweek", y="Net transfers") +
+       x="Gameweek", y="Net transfers", caption = chart_caption) +
   facet_wrap( ~ as_factor(web_name), nrow = 2, ncol = 4)
 
 ```
@@ -303,10 +299,9 @@ playersDetailed %>%
   ggplot(aes(x=round, y=points.5)) +
   geom_line(colour="#3A013B") +
   scale_y_comma() +
-  theme_ipsum(grid="XY", base_size = 14, axis_title_size = 14, caption_size = 12,
-              plot_title_size = 18, subtitle_size = 14) +
+  theme_ewen_ws() +
   labs(title="Average Points of Top Point Scoring Players",
-       x="Gameweek", y="Points average (last 5 GWs)") +
+       x="Gameweek", y="Points average (last 5 GWs)", caption = chart_caption) +
   facet_wrap( ~ as_factor(web_name), nrow = 2, ncol = 4)
   
 ```
